--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.5.1",
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "helmet": "^4.6.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
