--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^8.5.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "mongoose": "^5.12.7",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.2",
     "ts-node-dev": "^1.1.6",
