--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Soumava Banerjee",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.5.1",
     "express": "^4.17.1",
