--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node-dev src/index.ts",
     "data:import": "ts-node src/seeder.ts ",
     "data:destroy": "ts-node src/seeder.ts -d ",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "transpile": "tsc"
   },
   "keywords": [],
@@ -23,11 +24,17 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.18",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.2",
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.2",
+    "@types/sinon": "^10.0.0",
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
+    "sinon": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
