--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "  ts-node-dev src/index.ts",
     "data:import": "ts-node src/seeder.ts ",
     "data:destroy": "ts-node src/seeder.ts -d ",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha  --exit -r  ts-node/register 'tests/**/*.ts'",
     "transpile": "tsc"
   },
   "keywords": [],
@@ -31,10 +31,10 @@
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.2",
-    "@types/sinon": "^10.0.0",
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "mocha": "^8.4.0",
-    "sinon": "^10.0.0",
+    "supertest": "^6.1.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
