unit tests for error handler and small fixups done

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.5.1",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "helmet": "^4.6.0",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0"
