--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
 PORT = 5000  #enter port here
 NODE_ENV = 'development' # enter server mode here
 MONGO_URI = "enter your atlas connection url here"
+MONGO_LOCAL_URI = "database for testing and experimentation purposes"
