--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
-    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^2.2.0",
@@ -53,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
     "@types/react-redux": "^7.1.16",
     "redux-devtools-extension": "^2.13.9"
   }
