--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "start": "  ts-node-dev --files src/index.ts",
+    "dev": "  ts-node-dev --files src/index.ts",
+    "postinstall": "npm run build",
+    "start": "node dist/src/index.js",
     "data:import": "ts-node src/seeder.ts ",
     "data:destroy": "ts-node src/seeder.ts -d ",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha  --exit -r  ts-node/register 'tests/**/*.ts'",
-    "transpile": "tsc"
+    "build": "rimraf dist && tsc"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "keywords": [],
   "author": "Soumava Banerjee",
