--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-slick": "^0.23.5",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
@@ -24,6 +25,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.3.5",
