--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-slick": "^0.23.5",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
