--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "  ts-node-dev --files src/index.ts",
-    "postinstall": "npm run build",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "data:import": "ts-node src/seeder.ts ",
     "data:destroy": "ts-node src/seeder.ts -d ",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha  --exit -r  ts-node/register 'tests/**/*.ts'",
@@ -19,31 +18,31 @@
   "author": "Soumava Banerjee",
   "license": "MIT",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
+    "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.21",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.4",
-    "@types/mocha": "^9.0.0",
-    "@types/mongoose": "^5.11.96",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^16.6.1",
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "mocha": "^9.0.3",
-    "supertest": "^6.1.5",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
+    "@types/chai": "^4.3.17",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mocha": "^10.0.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.1.0",
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "mocha": "^10.7.0",
+    "supertest": "^7.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.4"
   }
 }
